--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
+# Mac OS X hidden files
 .DS_Store
-*.pyc
+ 
+*.py[cod]
+ 
+# C extensions
+*.so
+ 
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+ 
+# Installer logs
+pip-log.txt
+ 
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+ 
+# Translations
+*.mo
+ 
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+*.py[cod]
 
 # C extensions
 *.so
@@ -11,14 +49,13 @@ dist
 build
 eggs
 parts
+bin
 var
 sdist
 develop-eggs
 .installed.cfg
 lib
 lib64
-__pycache__
-Genie.egg-info
 
 # Installer logs
 pip-log.txt
